--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
 		"lint": "prettier --check . && eslint ."
 	},
 	"devDependencies": {
-		"@eslint/compat": "^1.2.9",
-		"@eslint/js": "^9.28.0",
+		"@eslint/compat": "^1.3.0",
+		"@eslint/js": "^9.29.0",
 		"@expressive-code/plugin-collapsible-sections": "^0.41.2",
 		"@fontsource-variable/geist-mono": "^5.2.6",
 		"@fontsource-variable/inter-tight": "^5.2.6",
@@ -24,12 +24,10 @@
 		"@fontsource/fjalla-one": "^5.2.6",
 		"@fontsource/source-sans-pro": "^5.2.5",
 		"@sveltejs/adapter-auto": "^6.0.1",
-		"@sveltejs/kit": "^2.21.4",
+		"@sveltejs/kit": "^2.21.5",
 		"@sveltejs/vite-plugin-svelte": "^5.1.0",
-		"@tailwindcss/vite": "^4.1.8",
-		"animejs": "^4.0.2",
-		"dot-prop": "^9.0.0",
-		"eslint": "^9.28.0",
+		"@tailwindcss/vite": "^4.1.10",
+		"eslint": "^9.29.0",
 		"eslint-config-prettier": "^10.1.5",
 		"eslint-plugin-perfectionist": "^4.14.0",
 		"eslint-plugin-svelte": "^3.9.2",
@@ -38,15 +36,16 @@
 		"prettier-plugin-svelte": "^3.4.0",
 		"prettier-plugin-tailwindcss": "^0.6.12",
 		"shiki": "^3.6.0",
-		"svelte": "^5.33.19",
+		"svelte": "^5.34.3",
 		"svelte-check": "^4.2.1",
-		"tailwindcss": "^4.1.8",
+		"tailwindcss": "^4.1.10",
 		"typescript": "^5.8.3",
 		"typescript-eslint": "^8.34.0",
 		"vite": "^6.3.5"
 	},
 	"pnpm": {
 		"onlyBuiltDependencies": [
+			"@tailwindcss/oxide",
 			"esbuild"
 		]
 	}
