--- a/package.json
+++ b/package.json
@@ -11,37 +11,52 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"format": "prettier --write .",
-		"lint": "prettier --check . && eslint ."
+		"lint": "prettier --check . && eslint .",
+		"storybook": "storybook dev -p 6006",
+		"build-storybook": "storybook build",
+		"test:unit": "vitest",
+		"test": "npm run test:unit -- --run"
 	},
 	"devDependencies": {
+		"@chromatic-com/storybook": "^4.0.0",
 		"@eslint/compat": "^1.3.0",
 		"@eslint/js": "^9.29.0",
-		"@expressive-code/plugin-collapsible-sections": "^0.41.2",
 		"@fontsource-variable/geist-mono": "^5.2.6",
 		"@fontsource-variable/inter-tight": "^5.2.6",
 		"@fontsource-variable/merriweather": "^5.2.4",
 		"@fontsource-variable/source-serif-4": "^5.2.8",
 		"@fontsource/fjalla-one": "^5.2.6",
 		"@fontsource/source-sans-pro": "^5.2.5",
+		"@storybook/addon-a11y": "^9.0.12",
+		"@storybook/addon-docs": "^9.0.12",
+		"@storybook/addon-svelte-csf": "^5.0.3",
+		"@storybook/addon-vitest": "^9.0.12",
+		"@storybook/sveltekit": "^9.0.12",
 		"@sveltejs/adapter-auto": "^6.0.1",
 		"@sveltejs/kit": "^2.21.5",
 		"@sveltejs/vite-plugin-svelte": "^5.1.0",
 		"@tailwindcss/vite": "^4.1.10",
+		"@testing-library/jest-dom": "^6.6.3",
+		"@testing-library/svelte": "^5.2.4",
+		"@types/node": "^22",
 		"eslint": "^9.29.0",
 		"eslint-config-prettier": "^10.1.5",
-		"eslint-plugin-perfectionist": "^4.14.0",
+		"eslint-plugin-storybook": "^9.0.12",
 		"eslint-plugin-svelte": "^3.9.2",
 		"globals": "^16.2.0",
+		"jsdom": "^26.0.0",
 		"prettier": "^3.5.3",
 		"prettier-plugin-svelte": "^3.4.0",
 		"prettier-plugin-tailwindcss": "^0.6.12",
 		"shiki": "^3.6.0",
-		"svelte": "^5.34.3",
+		"storybook": "^9.0.12",
+		"svelte": "^5.34.5",
 		"svelte-check": "^4.2.1",
 		"tailwindcss": "^4.1.10",
 		"typescript": "^5.8.3",
-		"typescript-eslint": "^8.34.0",
-		"vite": "^6.3.5"
+		"typescript-eslint": "^8.34.1",
+		"vite": "^6.3.5",
+		"vitest": "^3.2.3"
 	},
 	"pnpm": {
 		"onlyBuiltDependencies": [
